Bugfix: Logo is too big
Hopefully this fixes it...

--- a/style/home.css
+++ b/style/home.css
@@ -61,7 +61,6 @@ blockquote {
 	height: 25vw;
 	max-width: 66vw;
 	min-height: 35vh;
-	object-fit: scale-down;
 	position: relative;
 	top: 40%;
 	left: 50%;
